[tool.poetry]
name = "kelvin"
version = "0.1.0"
description = "A static website generator inspired by Jekyll"
authors = ["Jim Connell <james.d.connell@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"
Jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
